src/popcorn/y.output
   0  $accept : start $end

   1  start : program

   2  program : function_definition
   3          | declaration NEWLINE
   4          | program function_definition
   5          | program declaration NEWLINE
   6          | error NEWLINE

   7  declaration : const
   8              | EXTERN id_fn_list
   9              | EXTERN INTEGER id_fn_list
  10              | EXTERN REAL id_fn_list
  11              | INIT ID '=' '[' number_list ']'
  12              | INIT INTEGER ID '=' '[' number_list ']'
  13              | INIT REAL ID '=' '[' number_list ']'

  14  const : CONST multi_atrib
  15        | CONST ID '=' '[' number_list ']'

  16  multi_atrib : ID '=' value
  17              | ID ',' multi_atrib ',' value

  18  function_definition : INTEGER function NEWLINE NEWBLOCK compound_statement END NEWLINE
  19                      | REAL function NEWLINE NEWBLOCK compound_statement END NEWLINE
  20                      | function NEWLINE NEWBLOCK compound_statement END NEWLINE
  21                      | error END NEWLINE

  22  function : ID '(' id_list ')'
  23           | ID '(' ')'
  24           | ID '(' error ')'

  25  compound_statement : const_list NEWLINE decl_var_list statement_list
  26                     | const_list NEWLINE statement_list
  27                     | decl_var_list statement_list
  28                     | statement_list

  29  statement : OLDBLOCK
  30            | NEWBLOCK
  31            | NEWLINE
  32            | if_statement NEWLINE
  33            | while_statement NEWLINE
  34            | do_while_statement NEWLINE
  35            | for_statement NEWLINE
  36            | expression NEWLINE
  37            | '[' ID ']' EQ_OP expression NEWLINE

  38  extra_statement : statement
  39                  | CONTINUE NEWLINE
  40                  | CONTINUE INT_NUMBER NEWLINE
  41                  | BREAK NEWLINE
  42                  | BREAK INT_NUMBER NEWLINE

  43  ultra_statement : NEWLINE NEWBLOCK decl_var_list extra_statement_list
  44                  | NEWLINE NEWBLOCK extra_statement_list

  45  bonus_statement : NEWLINE NEWBLOCK decl_var_list statement_list
  46                  | NEWLINE NEWBLOCK statement_list

  47  while_statement : WHILE expression DO ultra_statement DONE
  48                  | WHILE expression DO ultra_statement ELSE bonus_statement DONE
  49                  | WHILE error DONE

  50  do_while_statement : DO ultra_statement UNTIL expression DONE
  51                     | DO ultra_statement UNTIL expression ELSE bonus_statement DONE
  52                     | DO error DONE

  53  for_statement : FOR for_start cond iter DO ultra_statement DONE
  54                | FOR for_start cond iter DO NEWLINE DONE
  55                | FOR error DONE

  56  for_start : expression_list ';'
  57            | ';'

  58  cond : expression ';'
  59       | ';'

  60  iter : expression_list
  61       |

  62  if_statement : IF expression THEN ultra_statement ENDIF
  63               | IF expression THEN ultra_statement elif_statement ENDIF
  64               | IF expression THEN ultra_statement ELSE bonus_statement ENDIF
  65               | IF expression THEN ultra_statement elif_statement ELSE bonus_statement ENDIF
  66               | error ENDIF

  67  elif_def : ELIF expression THEN ultra_statement

  68  elif_statement : elif_def
  69                 | elif_statement elif_def

  70  decl_var : VAR array_id_list NEWLINE
  71           | VAR INTEGER array_id_list NEWLINE
  72           | VAR REAL array_id_list NEWLINE
  73           | VAR error NEWLINE

  74  expression : function_call
  75             | '(' expression ')'
  76             | INC lvalue
  77             | DEC lvalue
  78             | lvalue INC
  79             | lvalue DEC
  80             | expression '+' expression
  81             | expression '-' expression
  82             | expression '*' expression
  83             | expression '/' expression
  84             | expression EXP expression
  85             | expression '%' expression
  86             | lvalue '=' expression
  87             | lvalue ADDEDATTRIB expression
  88             | expression AND_OP expression
  89             | expression OR_OP expression
  90             | expression EQ_OP expression
  91             | expression NE_OP expression
  92             | expression GE_OP expression
  93             | expression LE_OP expression
  94             | expression '<' expression
  95             | expression '>' expression
  96             | expression IMPLICA expression
  97             | '+' expression
  98             | '-' expression
  99             | '@' lvalue
 100             | NOT expression
 101             | expression '!'
 102             | expression OUT
 103             | lvalue '?'
 104             | STR
 105             | lvalue
 106             | number

 107  lvalue : ID
 108         | ID '[' expression ']'

 109  function_call : ID '(' expression_list ')'
 110                | ID '(' ')'

 111  number : INT_NUMBER
 112         | REAL_NUMBER

 113  value : number
 114        | STR

 115  number_list : number
 116              | '-' number
 117              | number_list ',' number
 118              | number_list ',' '-' number

 119  id_list : ID
 120          | id_list ',' ID

 121  id_fn_list : ID
 122             | function
 123             | id_fn_list ',' ID
 124             | id_fn_list ',' function

 125  array_id_list : lvalue
 126                | ID '[' ']'
 127                | array_id_list ',' ID '[' ']'
 128                | array_id_list ',' lvalue

 129  expression_list : expression
 130                  | expression_list ',' expression

 131  decl_var_list : decl_var
 132                | decl_var_list decl_var

 133  const_list : const
 134             | const_list NEWLINE const

 135  extra_statement_list : extra_statement
 136                       | extra_statement_list extra_statement

 137  statement_list : statement
 138                 | statement_list statement

state 0
	$accept : . start $end  (0)

	error  shift 1
	INTEGER  shift 2
	CONST  shift 3
	ID  shift 4
	EXTERN  shift 5
	REAL  shift 6
	INIT  shift 7
	.  error

	start  goto 8
	program  goto 9
	const  goto 10
	function  goto 11
	function_definition  goto 12
	declaration  goto 13


state 1
	program : error . NEWLINE  (6)
	function_definition : error . END NEWLINE  (21)

	END  shift 14
	NEWLINE  shift 15
	.  error


state 2
	function_definition : INTEGER . function NEWLINE NEWBLOCK compound_statement END NEWLINE  (18)

	ID  shift 4
	.  error

	function  goto 16


state 3
	const : CONST . multi_atrib  (14)
	const : CONST . ID '=' '[' number_list ']'  (15)

	ID  shift 17
	.  error

	multi_atrib  goto 18


state 4
	function : ID . '(' id_list ')'  (22)
	function : ID . '(' ')'  (23)
	function : ID . '(' error ')'  (24)

	'('  shift 19
	.  error


state 5
	declaration : EXTERN . id_fn_list  (8)
	declaration : EXTERN . INTEGER id_fn_list  (9)
	declaration : EXTERN . REAL id_fn_list  (10)

	INTEGER  shift 20
	ID  shift 21
	REAL  shift 22
	.  error

	function  goto 23
	id_fn_list  goto 24


state 6
	function_definition : REAL . function NEWLINE NEWBLOCK compound_statement END NEWLINE  (19)

	ID  shift 4
	.  error

	function  goto 25


state 7
	declaration : INIT . ID '=' '[' number_list ']'  (11)
	declaration : INIT . INTEGER ID '=' '[' number_list ']'  (12)
	declaration : INIT . REAL ID '=' '[' number_list ']'  (13)

	INTEGER  shift 26
	ID  shift 27
	REAL  shift 28
	.  error


state 8
	$accept : start . $end  (0)

	$end  accept


state 9
	start : program .  (1)
	program : program . function_definition  (4)
	program : program . declaration NEWLINE  (5)

	error  shift 29
	INTEGER  shift 2
	CONST  shift 3
	ID  shift 4
	EXTERN  shift 5
	REAL  shift 6
	INIT  shift 7
	$end  reduce 1

	const  goto 10
	function  goto 11
	function_definition  goto 30
	declaration  goto 31


state 10
	declaration : const .  (7)

	.  reduce 7


state 11
	function_definition : function . NEWLINE NEWBLOCK compound_statement END NEWLINE  (20)

	NEWLINE  shift 32
	.  error


state 12
	program : function_definition .  (2)

	.  reduce 2


state 13
	program : declaration . NEWLINE  (3)

	NEWLINE  shift 33
	.  error


state 14
	function_definition : error END . NEWLINE  (21)

	NEWLINE  shift 34
	.  error


state 15
	program : error NEWLINE .  (6)

	.  reduce 6


state 16
	function_definition : INTEGER function . NEWLINE NEWBLOCK compound_statement END NEWLINE  (18)

	NEWLINE  shift 35
	.  error


state 17
	const : CONST ID . '=' '[' number_list ']'  (15)
	multi_atrib : ID . '=' value  (16)
	multi_atrib : ID . ',' multi_atrib ',' value  (17)

	'='  shift 36
	','  shift 37
	.  error


state 18
	const : CONST multi_atrib .  (14)

	.  reduce 14


state 19
	function : ID '(' . id_list ')'  (22)
	function : ID '(' . ')'  (23)
	function : ID '(' . error ')'  (24)

	error  shift 38
	ID  shift 39
	')'  shift 40
	.  error

	id_list  goto 41


state 20
	declaration : EXTERN INTEGER . id_fn_list  (9)

	ID  shift 21
	.  error

	function  goto 23
	id_fn_list  goto 42


state 21
	function : ID . '(' id_list ')'  (22)
	function : ID . '(' ')'  (23)
	function : ID . '(' error ')'  (24)
	id_fn_list : ID .  (121)

	'('  shift 19
	NEWLINE  reduce 121
	','  reduce 121


state 22
	declaration : EXTERN REAL . id_fn_list  (10)

	ID  shift 21
	.  error

	function  goto 23
	id_fn_list  goto 43


state 23
	id_fn_list : function .  (122)

	.  reduce 122


state 24
	declaration : EXTERN id_fn_list .  (8)
	id_fn_list : id_fn_list . ',' ID  (123)
	id_fn_list : id_fn_list . ',' function  (124)

	','  shift 44
	NEWLINE  reduce 8


state 25
	function_definition : REAL function . NEWLINE NEWBLOCK compound_statement END NEWLINE  (19)

	NEWLINE  shift 45
	.  error


state 26
	declaration : INIT INTEGER . ID '=' '[' number_list ']'  (12)

	ID  shift 46
	.  error


state 27
	declaration : INIT ID . '=' '[' number_list ']'  (11)

	'='  shift 47
	.  error


state 28
	declaration : INIT REAL . ID '=' '[' number_list ']'  (13)

	ID  shift 48
	.  error


state 29
	function_definition : error . END NEWLINE  (21)

	END  shift 14
	.  error


state 30
	program : program function_definition .  (4)

	.  reduce 4


state 31
	program : program declaration . NEWLINE  (5)

	NEWLINE  shift 49
	.  error


state 32
	function_definition : function NEWLINE . NEWBLOCK compound_statement END NEWLINE  (20)

	NEWBLOCK  shift 50
	.  error


state 33
	program : declaration NEWLINE .  (3)

	.  reduce 3


state 34
	function_definition : error END NEWLINE .  (21)

	.  reduce 21


state 35
	function_definition : INTEGER function NEWLINE . NEWBLOCK compound_statement END NEWLINE  (18)

	NEWBLOCK  shift 51
	.  error


state 36
	const : CONST ID '=' . '[' number_list ']'  (15)
	multi_atrib : ID '=' . value  (16)

	INT_NUMBER  shift 52
	STR  shift 53
	REAL_NUMBER  shift 54
	'['  shift 55
	.  error

	number  goto 56
	value  goto 57


state 37
	multi_atrib : ID ',' . multi_atrib ',' value  (17)

	ID  shift 58
	.  error

	multi_atrib  goto 59


state 38
	function : ID '(' error . ')'  (24)

	')'  shift 60
	.  error


state 39
	id_list : ID .  (119)

	.  reduce 119


state 40
	function : ID '(' ')' .  (23)

	.  reduce 23


state 41
	function : ID '(' id_list . ')'  (22)
	id_list : id_list . ',' ID  (120)

	','  shift 61
	')'  shift 62
	.  error


state 42
	declaration : EXTERN INTEGER id_fn_list .  (9)
	id_fn_list : id_fn_list . ',' ID  (123)
	id_fn_list : id_fn_list . ',' function  (124)

	','  shift 44
	NEWLINE  reduce 9


state 43
	declaration : EXTERN REAL id_fn_list .  (10)
	id_fn_list : id_fn_list . ',' ID  (123)
	id_fn_list : id_fn_list . ',' function  (124)

	','  shift 44
	NEWLINE  reduce 10


state 44
	id_fn_list : id_fn_list ',' . ID  (123)
	id_fn_list : id_fn_list ',' . function  (124)

	ID  shift 63
	.  error

	function  goto 64


state 45
	function_definition : REAL function NEWLINE . NEWBLOCK compound_statement END NEWLINE  (19)

	NEWBLOCK  shift 65
	.  error


state 46
	declaration : INIT INTEGER ID . '=' '[' number_list ']'  (12)

	'='  shift 66
	.  error


state 47
	declaration : INIT ID '=' . '[' number_list ']'  (11)

	'['  shift 67
	.  error


state 48
	declaration : INIT REAL ID . '=' '[' number_list ']'  (13)

	'='  shift 68
	.  error


state 49
	program : program declaration NEWLINE .  (5)

	.  reduce 5


state 50
	function_definition : function NEWLINE NEWBLOCK . compound_statement END NEWLINE  (20)

	error  shift 69
	CONST  shift 3
	INT_NUMBER  shift 52
	ID  shift 70
	STR  shift 71
	IF  shift 72
	DO  shift 73
	WHILE  shift 74
	NEWLINE  shift 75
	NEWBLOCK  shift 76
	OLDBLOCK  shift 77
	VAR  shift 78
	REAL_NUMBER  shift 54
	'+'  shift 79
	'-'  shift 80
	INC  shift 81
	DEC  shift 82
	NOT  shift 83
	'@'  shift 84
	FOR  shift 85
	'['  shift 86
	'('  shift 87
	.  error

	expression  goto 88
	statement  goto 89
	statement_list  goto 90
	const  goto 91
	compound_statement  goto 92
	const_list  goto 93
	decl_var_list  goto 94
	if_statement  goto 95
	while_statement  goto 96
	do_while_statement  goto 97
	decl_var  goto 98
	function_call  goto 99
	lvalue  goto 100
	number  goto 101
	for_statement  goto 102


state 51
	function_definition : INTEGER function NEWLINE NEWBLOCK . compound_statement END NEWLINE  (18)

	error  shift 69
	CONST  shift 3
	INT_NUMBER  shift 52
	ID  shift 70
	STR  shift 71
	IF  shift 72
	DO  shift 73
	WHILE  shift 74
	NEWLINE  shift 75
	NEWBLOCK  shift 76
	OLDBLOCK  shift 77
	VAR  shift 78
	REAL_NUMBER  shift 54
	'+'  shift 79
	'-'  shift 80
	INC  shift 81
	DEC  shift 82
	NOT  shift 83
	'@'  shift 84
	FOR  shift 85
	'['  shift 86
	'('  shift 87
	.  error

	expression  goto 88
	statement  goto 89
	statement_list  goto 90
	const  goto 91
	compound_statement  goto 103
	const_list  goto 93
	decl_var_list  goto 94
	if_statement  goto 95
	while_statement  goto 96
	do_while_statement  goto 97
	decl_var  goto 98
	function_call  goto 99
	lvalue  goto 100
	number  goto 101
	for_statement  goto 102


state 52
	number : INT_NUMBER .  (111)

	.  reduce 111


state 53
	value : STR .  (114)

	.  reduce 114


state 54
	number : REAL_NUMBER .  (112)

	.  reduce 112


state 55
	const : CONST ID '=' '[' . number_list ']'  (15)

	INT_NUMBER  shift 52
	REAL_NUMBER  shift 54
	'-'  shift 104
	.  error

	number_list  goto 105
	number  goto 106


state 56
	value : number .  (113)

	.  reduce 113


state 57
	multi_atrib : ID '=' value .  (16)

	.  reduce 16


state 58
	multi_atrib : ID . '=' value  (16)
	multi_atrib : ID . ',' multi_atrib ',' value  (17)

	'='  shift 107
	','  shift 37
	.  error


state 59
	multi_atrib : ID ',' multi_atrib . ',' value  (17)

	','  shift 108
	.  error


state 60
	function : ID '(' error ')' .  (24)

	.  reduce 24


state 61
	id_list : id_list ',' . ID  (120)

	ID  shift 109
	.  error


state 62
	function : ID '(' id_list ')' .  (22)

	.  reduce 22


state 63
	function : ID . '(' id_list ')'  (22)
	function : ID . '(' ')'  (23)
	function : ID . '(' error ')'  (24)
	id_fn_list : id_fn_list ',' ID .  (123)

	'('  shift 19
	NEWLINE  reduce 123
	','  reduce 123


state 64
	id_fn_list : id_fn_list ',' function .  (124)

	.  reduce 124


state 65
	function_definition : REAL function NEWLINE NEWBLOCK . compound_statement END NEWLINE  (19)

	error  shift 69
	CONST  shift 3
	INT_NUMBER  shift 52
	ID  shift 70
	STR  shift 71
	IF  shift 72
	DO  shift 73
	WHILE  shift 74
	NEWLINE  shift 75
	NEWBLOCK  shift 76
	OLDBLOCK  shift 77
	VAR  shift 78
	REAL_NUMBER  shift 54
	'+'  shift 79
	'-'  shift 80
	INC  shift 81
	DEC  shift 82
	NOT  shift 83
	'@'  shift 84
	FOR  shift 85
	'['  shift 86
	'('  shift 87
	.  error

	expression  goto 88
	statement  goto 89
	statement_list  goto 90
	const  goto 91
	compound_statement  goto 110
	const_list  goto 93
	decl_var_list  goto 94
	if_statement  goto 95
	while_statement  goto 96
	do_while_statement  goto 97
	decl_var  goto 98
	function_call  goto 99
	lvalue  goto 100
	number  goto 101
	for_statement  goto 102


state 66
	declaration : INIT INTEGER ID '=' . '[' number_list ']'  (12)

	'['  shift 111
	.  error


state 67
	declaration : INIT ID '=' '[' . number_list ']'  (11)

	INT_NUMBER  shift 52
	REAL_NUMBER  shift 54
	'-'  shift 104
	.  error

	number_list  goto 112
	number  goto 106


state 68
	declaration : INIT REAL ID '=' . '[' number_list ']'  (13)

	'['  shift 113
	.  error


state 69
	if_statement : error . ENDIF  (66)

	ENDIF  shift 114
	.  error

